--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,32 +1,33 @@
 ---
 galaxy_info:
-  author: 'Andrew Rothstein'
+  author: Andrew Rothstein
+  company: BlackRock
   description: installs the up cli
-  company: 'BlackRock'
+  galaxy_tags: []
   license: MIT
-  min_ansible_version: 1.2
+  min_ansible_version: '1.2'
+  namespace: andrewrothstein
   platforms:
     - name: Alpine
       versions:
         - all
-    - name: Archlinux
+    - name: ArchLinux
       versions:
-        - latest
+        - all
     - name: Debian
       versions:
         - bookworm
         - bullseye
     - name: EL
       versions:
-        - 8
-        - 9
+        - '8'
+        - '9'
     - name: Fedora
       versions:
-        - 38
-        - 39
+        - '38'
+        - '39'
     - name: Ubuntu
       versions:
         - focal
         - jammy
-  galaxy_tags: []
-  role_name: 'up'
+  role_name: up
