--- a/test.yml
+++ b/test.yml
@@ -1,10 +1,14 @@
 ---
-- hosts: all
-  roles:
-    - role: '{{ playbook_dir }}'
+- name: Testing andrewrothstein.up
+  hosts: all
   tasks:
-    - command: /usr/local/bin/up --version
+    - name: Installing andrewrothstein.up
+      ansible.builtin.include_role:
+        name: '{{ playbook_dir }}'
+    - name: Executing 'up --version'
+      ansible.builtin.command: /usr/local/bin/up --version
+      changed_when: false
       register: up_test_output
-    - name: up --version
-      debug:
+    - name: Output of 'up --version'
+      ansible.builtin.debug:
         msg: '{{ up_test_output.stdout }}'
